--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -28,311 +28,15 @@
         var HeatmapGlobal = function () {
             var HeatmapExt = {
                 heatmap: ({
-                    "Locations": [
-                      {
-                          "long": 139.6493,
-                          "lat": 35.6764,
-                          "date": "16/01/2017",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.6993,
-                          "lat": 35.7148,
-                          "date": "16/01/2017",
-                          "intensity": "4"
-                      },
-                      {
-                          "long": 139.6862,
-                          "lat": 35.6810,
-                          "date": "16/01/2017",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.6909,
-                          "lat": 35.6856,
-                          "date": "16/01/2017",
-                          "intensity": "15"
-                      },
-                      {
-                          "long": 139.6868,
-                          "lat": 35.6829,
-                          "date": "16/01/2017",
-                          "intensity": "15"
-                      },
-                      {
-                          "long": 139.6746,
-                          "lat": 35.6880,
-                          "date": "16/01/2017",
-                          "intensity": "8"
-                      },
-                      {
-                          "long": 139.6523,
-                          "lat": 35.6905,
-                          "date": "16/01/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.6202,
-                          "lat": 35.7072,
-                          "date": "16/01/2017",
-                          "intensity": "3"
-                      },
-                      {
-                          "long": 139.6802,
-                          "lat": 35.7372,
-                          "date": "16/01/2017",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.620082,
-                          "lat": 35.613205,
-                          "date": "16/01/2017",
-                          "intensity": "1"
-                      },
-                      {
-                          "long": 139.610082,
-                          "lat": 35.663205,
-                          "date": "16/01/2017",
-                          "intensity": "3"
-                      },
-                      {
-                          "long": 139.640082,
-                          "lat": 35.693205,
-                          "date": "16/01/2017",
-                          "intensity": "10"
-                      },
-                      {
-                          "long": 139.643151,
-                          "lat": 35.689679,
-                          "date": "16/01/2017",
-                          "intensity": "8"
-                      },
-                      {
-                          "long": 139.650532,
-                          "lat": 35.689609,
-                          "date": "16/01/2017",
-                          "intensity": "12"
-                      },
-                      {
-                          "long": 139.646262,
-                          "lat": 35.689557,
-                          "date": "16/01/2017",
-                          "intensity": "5"
-                      },
-                      {
-                          "long": 139.647099,
-                          "lat": 35.690480,
-                          "date": "28/02/2017",
-                          "intensity": "4"
-                      },
-                      {
-                          "long": 139.638966,
-                          "lat": 35.690445,
-                          "date": "28/02/2017",
-                          "intensity": "3"
-                      },
-                      {
-                          "long": 139.647077,
-                          "lat": 35.691613,
-                          "date": "28/02/2017",
-                          "intensity": "5"
-                      },
-                      {
-                          "long": 139.645962,
-                          "lat": 35.690480,
-                          "date": "28/02/2017",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.643601,
-                          "lat": 35.690410,
-                          "date": "28/02/2017",
-                          "intensity": "5"
-                      },
-                      {
-                          "long": 139.645618,
-                          "lat": 35.690585,
-                          "date": "28/02/2017",
-                          "intensity": "15"
-                      },
-                      {
-                          "long": 139.640383,
-                          "lat": 35.690376,
-                          "date": "28/02/2017",
-                          "intensity": "25"
-                      },
-                      {
-                          "long": 139.649009,
-                          "lat": 35.690689,
-                          "date": "28/02/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.649051,
-                          "lat": 35.690776,
-                          "date": "28/02/2017",
-                          "intensity": "8"
-                      },
-                      {
-                          "long": 139.645640,
-                          "lat": 35.690864,
-                          "date": "28/02/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.645404,
-                          "lat": 35.690968,
-                          "date": "28/02/2017",
-                          "intensity": "5"
-                      },
-                      {
-                          "long": 139.651154,
-                          "lat": 35.690829,
-                          "date": "28/02/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.648172,
-                          "lat": 35.690811,
-                          "date": "28/02/2017",
-                          "intensity": "3"
-                      },
-                      {
-                          "long": 139.652270,
-                          "lat": 35.690864,
-                          "date": "28/02/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.634997,
-                          "lat": 35.690951,
-                          "date": "28/02/2017",
-                          "intensity": "25"
-                      },
-                      {
-                          "long": 139.6869,
-                          "lat": 35.6829,
-                          "date": "20/04/2017",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.6862,
-                          "lat": 35.6810,
-                          "date": "20/05/2017",
-                          "intensity": "3"
-                      },
-                      {
-                          "long": 139.6909,
-                          "lat": 35.6856,
-                          "date": "09/07/2017",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.6868,
-                          "lat": 35.6829,
-                          "date": "30/08/2017",
-                          "intensity": "8"
-                      },
-                      {
-                          "long": 139.6746,
-                          "lat": 35.6880,
-                          "date": "15/09/2017",
-                          "intensity": "25"
-                      },
-                      {
-                          "long": 139.6523,
-                          "lat": 35.6905,
-                          "date": "01/11/2017",
-                          "intensity": "12"
-                      },
-                      {
-                          "long": 139.6202,
-                          "lat": 35.7072,
-                          "date": "10/12/2017",
-                          "intensity": "11"
-                      },
-                      {
-                          "long": 137.3634,
-                          "lat": 34.8292,
-                          "date": "19/01/2015",
-                          "intensity": "2"
-                      },
-                      {
-                          "long": 139.4622,
-                          "lat": 35.8929,
-                          "date": "19/02/2015",
-                          "intensity": "7"
-                      },
-                      {
-                          "long": 139.4122,
-                          "lat": 35.8529,
-                          "date": "19/03/2015",
-                          "intensity": "25"
-                      },
-                      {
-                          "long": 139.4122,
-                          "lat": 35.8529,
-                          "date": "19/03/2017",
-                          "intensity": "11"
-                      }
-                    ],
+                    "Locations": jQuery.extend(true, {}, res.data.map_heatmap),
 
-                    "Radius": 20
+                    "Radius": 50
                 }),
-                icons: [
-                  {
-                      "long": 139.678835,
-                      "lat": 35.680895,
-                      "icon": "他社_リスト追加済.png",
-                      "date": "16/01/2017"
-                  },
-                  {
-                      "long": 139.673856,
-                      "lat": 35.681173,
-                      "icon": "他社_利用中.png",
-                      "date": "16/01/2017"
-                  },
-                  {
-                      "long": 139.675595,
-                      "lat": 35.680720,
-                      "icon": "他社_撰択済.png",
-                      "date": "16/01/2017"
-                  },
-                  {
-                      "long": 139.674972,
-                      "lat": 35.680860,
-                      "icon": "他社_未選択.png",
-                      "date": "16/01/2017"
-                  },
-                  {
-                      "long": 139.679393,
-                      "lat": 35.680581,
-                      "icon": "自社_リスト追加済.png",
-                      "date": "16/01/2017"
-                  },
-                  {
-                      "long": 139.647077,
-                      "lat": 35.691613,
-                      "icon": "自社_利用中.png",
-                      "date": "28/02/2017"
-                  },
-                  {
-                      "long": 139.647099,
-                      "lat": 35.690480,
-                      "icon": "自社_未選択.png",
-                      "date": "28/02/2017"
-                  },
-                  {
-                      "long": 139.638966,
-                      "lat": 35.690445,
-                      "icon": "自社_選択中.png",
-                      "date": "28/02/2017"
-                  }
-                ]
+                icons: jQuery.extend(true, {}, res.data.map_icons)
             };
             return HeatmapExt;
         }();
-       
+      
 
     </script>
     <style type="text/css">
