--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -156,20 +156,7 @@
             letter-spacing: 0.1em;
         }
         
-        .gm-style-iw {
-            width: 100% !important;
-            top: 0px !important;
-            left: 0px !important;
-            background-color: #fff;
-            border: 1px solid #e8616b;
-            box-shadow:6px 9px 10px;
-            min-height: 100% !important;
-            padding: 10px !important;
-            
-        }
-
-
-
+      
         .btn-group-lg > .btn, .btn-lg {
             padding: .25rem 0.5rem;
             font-size: 0.85rem;
@@ -261,7 +248,7 @@
 
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places"></script>
-
+    <script src="../static/gg/map_js_css/js_css/infobubble.js"></script>
     <script src="../static/gg/map_js_css/timeline.js"></script>
     <script src="../static/gg/map_js_css/heatmap.js"></script>
     <script src="../static/gg/map_js_css/gmaps-heatmap.js"></script>
